minor improvements and update readme

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,5 +1,18 @@
 <html>
+    <link rel="stylesheet" href="style.css">
     <body>
         <h1>RNG SEARCH</h1>
+        <p> The search engines included are currently hard-coded in a json file. I hope to add an interactive menu to add and remove entries in this page. For now, here are the contents of the json: </p>
+        <table>
+            <thead>
+            <tr>
+            <th>Search Engines</th>
+            </tr>
+            </thead>
+        <tbody>
+            <script src="table-script.js"> </script>
+        </tbody>
+        </table>
     </body>
 </html>
+
